some small progress

--- a/src/styles/Education.css
+++ b/src/styles/Education.css
@@ -7,10 +7,7 @@ form {
 .label {
   margin-bottom: -10px;
 }
-#buttons {
+.buttons {
   display: flex;
   gap: 2rem;
-}
-#title {
-  margin-bottom: 1rem;
 }
