trying to use css modules

--- a/src/styles/Education.module.css
+++ b/src/styles/Education.module.css
@@ -1,16 +1,13 @@
-form {
+.form {
   display: flex;
   flex-direction: column;
   margin: 0rem 1rem;
   gap: 1rem;
 }
+.label {
+  margin-bottom: -10px;
+}
 .buttons {
   display: flex;
   gap: 2rem;
-}
-#title {
-  margin-bottom: 1rem;
-}
-.label {
-  margin-bottom: -10px;
 }
