Doesn't look pretty but it works!

--- a/src/styles/General.module.css
+++ b/src/styles/General.module.css
@@ -1,22 +1,23 @@
-.form {
-  display: flex;
-  flex-direction: column;
-  padding: 1rem 0rem;
-  gap: 1rem;
-}
-#submitted {
+.form > form {
   display: flex;
   flex-direction: column;
   margin: 0rem 1rem;
   gap: 1rem;
 }
-.view {
+#submitted > form {
   display: flex;
   flex-direction: column;
-  padding: 1rem 0rem;
+  margin: 1rem 1rem;
   gap: 1rem;
 }
 .hidden * {
   display: none;
   visibility: hidden;
+}
+label {
+  margin-bottom: -0.8rem;
+}
+h1 {
+  margin: 0.2rem;
+  font-size: 1.5rem;
 }
