--- a/src/styles/Education.module.css
+++ b/src/styles/Education.module.css
@@ -1,13 +1,23 @@
-.form {
+.form > form {
   display: flex;
   flex-direction: column;
   margin: 0rem 1rem;
   gap: 1rem;
 }
-.label {
-  margin-bottom: -10px;
-}
-.buttons {
+#submitted > form {
   display: flex;
-  gap: 2rem;
+  flex-direction: column;
+  margin: 1rem 1rem;
+  gap: 1rem;
+}
+.hidden * {
+  display: none;
+  visibility: hidden;
+}
+label {
+  margin-bottom: -0.8rem;
+}
+h1 {
+  font-size: 1.5rem;
+  margin: 0.2rem;
 }
